added commenting thorough comments email. added build script. author is now a link to mailto

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: "sidesteps' blog"
     <h1 itemprop="name" id="title">{{ page.title }}</h1>
 	<h3 class="signature">
 		By <span itemprop="author" itemscope itemtype="http://schema.org/Person" class="author">
-			<a itemprop="sameAs" target="_blank" href="https://gitlab.com/sidestep">@sidestep</a>
+            <a itemprop="sameAs" target="_blank" href='mailto:sidestep@gigz.eu'>@sidestep</a>
 		</span>
     <span class="tags">tags: tech programming design architecture</span>
 </div>
